# goit-pythonweb-hw-03

./: README.md  docker-compose.yaml
WebServer/: Dockerfile  error.html  index.html  info.html  main.py  message.html  pyproject.toml  requirements.txt
WebServer/storage/: data.json
WebServer/templates/: info.html.jinja
